docs/book/samples/appa/unused_binding_check.out
error[unused]: unused binding `x`
  --> unused_binding_check.kso:2:3
   2 |   x = 1
         ^
